# ldjam-46

./: .gitignore  Cargo.toml  ideas.md  todo.md
src/: collision.rs  creature.rs  data.rs  draw.rs  lazy.rs  lstm.rs  main.rs  mutate.rs  nn.rs
