[package]
name = "ldjam-46"
version = "0.1.0"
authors = ["Szymon Walter <waltersz@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "1.0"
ggez = "0.5"
nalgebra = { version = "0.21", features = ["serde-serialize"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
